# SHAPER

./: .gitignore  BOOST.ipynb  BOOST.py  CITATION.cff  Jet_Observables.py  LICENSE  README.md  dataframe.pkl  example.ipynb  gaussian_tests.ipynb  isotropy_test.ipynb  isotropy_tests.ipynb  jets.ipynb  n_jettiness.ipynb  n_subjettiness.ipynb  nohup.out  nsubjettiness_tests.ipynb  observables.ipynb  open_data.ipynb  open_data_test.ipynb  photoshoot.ipynb  pileup.ipynb  plot_gradient_flows_2D.ipynb  pyproject.toml  section_1_plots.ipynb  test.ipynb  top_test.ipynb  utils.py
NSubjettiness/: Graph.py  NSubjettiness.py  model.py
data/: pileup.py
examples/: Apollonius.ipynb  example.ipynb  image_emds_2D.ipynb  isotropy_test.ipynb  jets.ipynb  pairwise_emds.ipynb  pileup.ipynb  section_1_plots.ipynb
old/: BOOST.ipynb  tests.ipynb
results/old/energies/: coefficients_weighted_10K_0.005.csv  coefficients_weighted_10K_100.0.csv  coefficients_weighted_10K_500.0.csv  coefficients_weighted_15K_0.5.csv  coefficients_weighted_15K_10.0.csv  coefficients_weighted_15K_500.0.csv  coefficients_weighted_15K_75.0.csv  coefficients_weighted_1K_0.05.csv  coefficients_weighted_1K_10.0.csv  coefficients_weighted_25K_0.01.csv  coefficients_weighted_25K_10.0.csv  coefficients_weighted_25K_100.0.csv  coefficients_weighted_2K_0.001.csv  coefficients_weighted_2K_0.75.csv  coefficients_weighted_2K_1.0.csv  coefficients_weighted_30K_1.0.csv  coefficients_weighted_30K_5.0.csv  coefficients_weighted_30K_50.0.csv  coefficients_weighted_3K_0.1.csv  coefficients_weighted_3K_0.25.csv  coefficients_weighted_3K_0.5.csv  coefficients_weighted_4K_0.001.csv  coefficients_weighted_4K_0.5.csv  coefficients_weighted_4K_0.75.csv  coefficients_weighted_4K_250.0.csv  coefficients_weighted_50K_0.005.csv  coefficients_weighted_50K_0.01.csv  coefficients_weighted_5K_0.05.csv  coefficients_weighted_5K_0.25.csv  coefficients_weighted_5K_0.75.csv  coefficients_weighted_5K_7.5.csv  coefficients_weighted_7K_1.0.csv  coefficients_weighted_7K_100.0.csv  coefficients_weighted_8K_0.01.csv  coefficients_weighted_9K_0.01.csv  coefficients_weighted_9K_100.0.csv  dictionary_weighted_10K_0.001.csv  dictionary_weighted_10K_0.25.csv  dictionary_weighted_10K_0.75.csv  (+61 more)
src/: CommonObservables.py  Graph.py  GroundSpace.py  Manifolds.py  Observables.py  Shaper.py  datasets.py  eKDS.py  plot_utils.py  shaper.py
src/pyshaper/: CommonObservables.py  Observables.py  Shaper.py
src/utils/: generic_utils.py  plot_utils.py
utils/: data_utils.py  plot_utils.py
(+3 files in other folders)
